adding server side rendering support

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express-http-proxy": "^1.1.0",
     "html-entities": "^1.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "nuka-carousel": "^4.0.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
@@ -14,10 +15,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf lib && NODE_ENV=production REACT_APP_SERVICE_HOST=https://www.westelm.com node scripts/runServerBuild.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "react-scripts build && node server.js"
+    "server": "node lib/server.js"
   },
-  "proxy": "https://www.westelm.com"
+  "proxy": "https://www.westelm.com",
+  "devDependencies": {
+    "webpack": "3.8.1",
+    "webpack-node-externals": "^1.7.2"
+  }
 }
