--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "proxy": "https://www.westelm.com",
   "devDependencies": {
+    "react-test-renderer": "^16.3.1",
     "webpack": "3.8.1",
     "webpack-node-externals": "^1.7.2"
   }
